Fix java9 issues