@@ -12,6 +12,8 @@
     <properties>
         <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
         <swagger-ui.version>2.9.2</swagger-ui.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <jvmArgs></jvmArgs>
     </properties>
 
     <dependencyManagement>
@@ -31,7 +33,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -44,7 +46,7 @@
                 <configuration>
                     <forkCount>2</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xms1g -Xmx2g -Dfile.encoding=UTF-8 ${surefireArgLine}</argLine>
+                    <argLine>-Xms1g -Xmx2g -Dfile.encoding=UTF-8 ${jvmArgs} ${surefireArgLine}</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -75,7 +77,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <jvmArguments>
-                        -Xms256M -Xmx1024M
+                        -Xms256M -Xmx1024M ${jvmArgs}
                     </jvmArguments>
                 </configuration>
                 <executions>
@@ -138,10 +140,6 @@
             <artifactId>h2</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-hikaricp</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${swagger-ui.version}</version>
@@ -152,6 +150,12 @@
             <version>${swagger-ui.version}</version>
         </dependency>
         <dependency>
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
+            <version>1.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -159,6 +163,40 @@
     </dependencies>
 
     <profiles>
+        <profile>
+            <id>java9</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <properties>
+                <jvmArgs>--add-modules java.xml.bind</jvmArgs>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>javax.xml.bind</groupId>
+                    <artifactId>jaxb-api</artifactId>
+                    <version>2.3.0</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>${maven-compiler-plugin.version}</version>
+                        <configuration>
+                            <source>9</source>
+                            <target>9</target>
+                            <compilerArgs>
+                                <arg>--add-modules</arg>
+                                <arg>java.xml.bind</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>gatling</id>
             <dependencies>
@@ -168,19 +206,14 @@
                     <version>2.12.7</version>
                 </dependency>
                 <dependency>
-                    <groupId>javax.xml.bind</groupId>
-                    <artifactId>jaxb-api</artifactId>
-                    <version>2.2.11</version>
-                </dependency>
-                <dependency>
                     <groupId>com.sun.xml.bind</groupId>
                     <artifactId>jaxb-core</artifactId>
-                    <version>2.2.11</version>
+                    <version>2.3.0.1</version>
                 </dependency>
                 <dependency>
                     <groupId>com.sun.xml.bind</groupId>
                     <artifactId>jaxb-impl</artifactId>
-                    <version>2.2.11</version>
+                    <version>2.3.2</version>
                 </dependency>
                 <dependency>
                     <groupId>javax.activation</groupId>
@@ -215,6 +248,7 @@
                         <configuration>
                             <jvmArguments>-Dspring.profiles.active=test</jvmArguments>
                             <jmxPort>19001</jmxPort>
+                            <jvmArguments>${jvmArgs}</jvmArguments>
                         </configuration>
                         <executions>
                             <execution>
@@ -247,7 +281,6 @@
                                     <goal>test</goal>
                                 </goals>
                                 <configuration>
-                                    <!--disableCompiler>true</disableCompiler-->
                                     <configFolder>${project.basedir}/src/test/resources</configFolder>
                                     <simulationClass>org.foo.bank.BankSimulation</simulationClass>
                                 </configuration>
